# susuro

./: Cargo.toml  LICENSE
assembler/: Cargo.toml
assembler/src/: assembly.pest  error.rs  lib.rs  parser.rs  symbol.rs
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
repl/: Cargo.toml
repl/src/: lib.rs
vm/: Cargo.toml
vm/src/: instruction.rs  lib.rs  opcode.rs
